Fix header extra margin and z-index

--- a/assets/styles/map.css
+++ b/assets/styles/map.css
@@ -26,7 +26,7 @@
     right: 0;
     top: 0;
     height: 100%;
-    z-index: 9999;
+    z-index: 1000;
     transition: transform .5s ease;
     transform: translateX(100%);
     -webkit-transform: translateX(100%);
